fix: Múltiplas correções de layout e animações
- Roadmap: Itens agora começam à direita e revelam conforme scroll
- Cases: Layout horizontal com fotos maiores (50% do card)
- Cases: Animação individual de cada card com contadores
- Cases: Fotos reais dos clientes (Dr. Demian, Tábita, Malu)
- Main.js: Removido sistema de snap que conflitava com ScrollTrigger
- Lenis: Integração limpa com GSAP ScrollTrigger

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <!-- Case 01: Dr. Demian -->
                     <article class="case-card" data-tilt>
                         <div class="case-image">
-                            <div class="case-avatar">👨‍⚕️</div>
+                            <img src="assets/images/cases/dr-demian.png" alt="Dr. Demian Borges" class="case-photo">
                             <div class="case-glow"></div>
                         </div>
                         <div class="case-info">
@@ -204,7 +204,7 @@
                     <!-- Case 02: Tábita Cintra -->
                     <article class="case-card" data-tilt>
                         <div class="case-image">
-                            <div class="case-avatar">💄</div>
+                            <img src="assets/images/cases/tabita-cintra.png" alt="Tábita Cintra" class="case-photo">
                             <div class="case-glow"></div>
                         </div>
                         <div class="case-info">
@@ -233,7 +233,7 @@
                     <!-- Case 03: Malu Celestino -->
                     <article class="case-card" data-tilt>
                         <div class="case-image">
-                            <div class="case-avatar">⭐</div>
+                            <img src="assets/images/cases/malu-celestino.png" alt="Malu Celestino" class="case-photo">
                             <div class="case-glow"></div>
                         </div>
                         <div class="case-info">
