--- a/index.html
+++ b/index.html
@@ -359,7 +359,14 @@
                                 <div class="target-circle c1"></div>
                                 <div class="target-circle c2"></div>
                                 <div class="target-circle c3"></div>
-                                <div class="target-icon">🎯</div>
+                                <div class="target-dots-container">
+                                    <div class="target-dot d1"></div>
+                                    <div class="target-dot d2"></div>
+                                    <div class="target-dot d3"></div>
+                                    <div class="target-dot d4"></div>
+                                    <div class="target-dot d5"></div>
+                                    <div class="target-dot d6"></div>
+                                </div>
                             </div>
                         </div>
                         <div class="slide-content">
@@ -386,7 +393,12 @@
                                     <svg viewBox="0 0 100 100" class="curve-svg">
                                         <path d="M10,90 Q40,80 50,50 T90,10" fill="none" class="curve-path" />
                                     </svg>
-                                    <div class="rocket-particle">🚀</div>
+                                    <div class="ascending-particles">
+                                        <div class="asc-part p1"></div>
+                                        <div class="asc-part p2"></div>
+                                        <div class="asc-part p3"></div>
+                                        <div class="asc-part p4"></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -410,9 +422,22 @@
                     <div class="method-slide">
                         <div class="slide-visual">
                             <div class="visual-anim visual-sales">
-                                <div class="chat-row left"><div class="bubble"></div></div>
-                                <div class="chat-row right"><div class="bubble"></div></div>
-                                <div class="chat-row left"><div class="bubble"></div></div>
+                                <div class="bullet-rain-container">
+                                <div class="bullet-row r1">
+                                    <div class="bullet-item"></div>
+                                    <div class="bullet-item"></div>
+                                    <div class="bullet-item"></div>
+                                </div>
+                                <div class="bullet-row r2">
+                                    <div class="bullet-item"></div>
+                                    <div class="bullet-item"></div>
+                                </div>
+                                <div class="bullet-row r3">
+                                    <div class="bullet-item"></div>
+                                    <div class="bullet-item"></div>
+                                    <div class="bullet-item"></div>
+                                </div>
+                            </div>
                             </div>
                         </div>
                         <div class="slide-content">
@@ -492,7 +517,20 @@
                             <div class="orb-ring ring-1"></div>
                             <div class="orb-ring ring-2"></div>
                             <div class="orb-ring ring-3"></div>
-                            <div class="orb-core">🤖</div>
+                            <div class="chat-simulation">
+                                <div class="chat-message msg-human m1">Como aumentar meu ROAS?</div>
+                                <div class="chat-message msg-ai m2">Analisando métricas...</div>
+                                <div class="chat-message msg-ai m3">Sugiro otimizar o público de Lookalike.</div>
+                                <div class="chat-message msg-human m4">E a taxa de conversão?</div>
+                                <div class="chat-message msg-ai m5">Detectei gargalo no checkout.</div>
+                                <div class="chat-message msg-ai m6">Aplicando recuperação automática.</div>
+                                <div class="chat-message msg-human m7">Qual a projeção de LTV?</div>
+                                <div class="chat-message msg-ai m8">Crescimento estimado de 25%.</div>
+                                <div class="chat-message msg-human m9">Agendar reunião?</div>
+                                <div class="chat-message msg-ai m10">Agenda enviada para seu WhatsApp.</div>
+                                <div class="chat-message msg-human m11">Excelente!</div>
+                                <div class="chat-message msg-ai m12">Sempre à disposição. 🚀</div>
+                            </div>
                         </div>
                         <div class="ai-status">
                             <span class="status-dot"></span>
