Update animations, fix founders image and chat styles

--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
                         <div class="founders-card">
                             <div class="founders-image revealed">
                                 <!-- Placeholder Image -->
-                                <img src="https://placehold.co/600x800/1a1a1a/ffffff?text=Founders" alt="Thiago & Roni">
+                                <img src="assets/images/founders.png" alt="Paulo Almeida & Vinicius Gallotti">
                                 <div class="image-overlay"></div>
                             </div>
                             <div class="founders-info">
-                                <div class="founders-names">THIAGO & RONI</div>
+                                <div class="founders-names">PAULO ALMEIDA & VINICIUS GALLOTTI</div>
                                 <div class="founders-role">Co-Founders</div>
                             </div>
                         </div>
@@ -389,16 +389,13 @@
                     <div class="method-slide">
                         <div class="slide-visual">
                             <div class="visual-anim visual-lancamento">
-                                <div class="launch-curve">
-                                    <svg viewBox="0 0 100 100" class="curve-svg">
-                                        <path d="M10,90 Q40,80 50,50 T90,10" fill="none" class="curve-path" />
-                                    </svg>
-                                    <div class="ascending-particles">
-                                        <div class="asc-part p1"></div>
-                                        <div class="asc-part p2"></div>
-                                        <div class="asc-part p3"></div>
-                                        <div class="asc-part p4"></div>
-                                    </div>
+                                <div class="ascending-particles">
+                                    <div class="asc-part p1"></div>
+                                    <div class="asc-part p2"></div>
+                                    <div class="asc-part p3"></div>
+                                    <div class="asc-part p4"></div>
+                                    <div class="asc-part p5"></div>
+                                    <div class="asc-part p6"></div>
                                 </div>
                             </div>
                         </div>
